# shen-rust

./: Cargo.nix  Cargo.toml  default.nix  shen-rust.org
nix/: crates-io.nix  default.nix  release.nix
src/: main.rs
